# marshall-extensions

./: README.md
docs/: Extension-Development.md  Home.md  Sandbox-Architecture.md
extensions/forensics/memory-forensics/: Makefile  manifest.json
extensions/forensics/memory-forensics/include/: memory_forensics.h
extensions/forensics/memory-forensics/src/: memory_forensics.c
extensions/network/traffic-analyzer/: main.ts  manifest.json
extensions/recon/cert-inspector/: main.rb  manifest.json
extensions/recon/header-analyzer/: main.js  manifest.json
extensions/recon/shodan-lookup/: manifest.json
extensions/recon/whois-inspector/: manifest.json
extensions/recon/xss-scanner/: main.js  manifest.json
extensions/utility/request-tamper/: main.lua  manifest.json
lib/: marshall-api.js
osint/shodan-lookup/: main.js
osint/whois-inspector/: main.js
sandbox/comm/: channel.ts  package.json  tsconfig.json
sandbox/core/: Cargo.toml
sandbox/core/src/: channel.rs  isolation.rs  lib.rs  verification.rs
sandbox/honeypot/: go.mod  main.go
